--- a/src/components/overrides.css
+++ b/src/components/overrides.css
@@ -59,3 +59,14 @@ a:hover {
 a svg, h1 svg {
   vertical-align: -.125em;
 }
+
+/* PrismJS */
+.gatsby-highlight-code-line {
+  background-color: #feb;
+  display: block;
+  margin-right: -1em;
+  margin-left: -1em;
+  padding-right: 1em;
+  padding-left: 0.75em;
+  border-left: 0.25em solid #f99;
+}
