Line numbers + highlight line

--- a/src/components/overrides.css
+++ b/src/components/overrides.css
@@ -62,6 +62,10 @@ a svg, h1 svg {
 
 /* PrismJS */
 
+/**
+ * If you already use line highlighting
+ */
+ 
 .gatsby-highlight-code-line {
   background-color: #feb;
   display: block;
@@ -70,4 +74,27 @@ a svg, h1 svg {
   padding-right: 1em;
   padding-left: 0.75em;
   border-left: 0.25em solid #f99;
+}
+
+.gatsby-highlight pre[class*="language-"].line-numbers {
+  padding-left: 2.8em;
+}
+
+
+/**
+ * If you only want to use line numbering
+ */
+
+.gatsby-highlight {
+  background-color: #f5f2f0;
+  border-radius: 0.3em;
+  margin: 0.5em 0;
+  padding: 1em;
+  overflow: auto;
+}
+
+.gatsby-highlight pre[class*="language-"].line-numbers {
+  padding: 0;
+  padding-left: 2.8em;
+  overflow: initial;
 }
