--- a/src/components/overrides.css
+++ b/src/components/overrides.css
@@ -60,6 +60,36 @@ a svg, h1 svg {
   vertical-align: -.125em;
 }
 
+blockquote {
+  /* background: #f9f9f9; */
+  border-left: 10px solid #ccc;
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
+  quotes: "\201C""\201D""\2018""\2019";
+}
+
+blockquote:before {
+  color: #ccc;
+  content: open-quote;
+  font-size: 4em;
+  line-height: 0.1em;
+  margin-right: 0.25em;
+  vertical-align: -0.4em;
+}
+
+blockquote p {
+  display: inline;
+}
+
+blockquote a {
+  display: block;
+  float: right;
+}
+
+.blog-post-content img {
+  max-width: 100%;
+}
+
 /* PrismJS */
 
 /**
