--- a/src/components/overrides.css
+++ b/src/components/overrides.css
@@ -60,6 +60,10 @@ a svg, h1 svg {
   vertical-align: -.125em;
 }
 
+aside > h2:first-child{
+  margin-top: 0;
+}
+
 blockquote {
   /* background: #f9f9f9; */
   border-left: 10px solid #ccc;
